Implementação NGRX e Entity

--- a/src/app/ngrx/ngrx.page.html
+++ b/src/app/ngrx/ngrx.page.html
@@ -14,8 +14,8 @@
         <app-person
           *ngFor="let p of people$ | async"
           [person]="p"
-          (delete)="delete(p)"
-          (update)="update(p)"
+          (delete)="delete($event)"
+          (update)="update($event)"
         ></app-person>
       </ion-col>
     </ion-row>
